# v8unpack-agent

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: tests.yml
config/: task_meta.yml
docs/: IMPLEMENTATION_STATUS.md  drift_checker.md  elem_parser.md  external_forms_structure.md  form_router.md  form_summary.md  managed_form_summary.md  managed_forms_structure.md  scan_forms.md  skd_extractor.md
examples/: basic_usage.py  extract_skd_queries.py
tests/: _managed_fixtures.py  test_discover_managed_forms.py  test_drift_checker.py  test_drift_checker_external.py  test_drift_content_hash.py  test_elem_parser.py  test_elem_sha256_drift.py  test_elem_structure_hash.py  test_extractor.py  test_form_artifact.py  test_form_paths.py  test_form_router.py  test_form_router_hash_baseline.py  test_form_router_mixed.py  test_form_scan_index_elem.py  test_form_summary.py  test_forms_index.py  test_managed_fixtures.py  test_managed_form_adapter.py  test_managed_form_parser.py  test_managed_form_summary.py  test_pipeline.py  test_scan_external_forms.py  test_scan_forms.py  test_scan_forms_cli.py  test_scan_forms_external_bsl.py  test_scan_forms_load.py  test_shadow_tree.py  test_skd_extractor.py  test_skd_extractor_batch.py  test_sync_index.py  test_v8unpack_backend.py
v8unpack_agent/: __init__.py  __main__.py  drift_checker.py  elem_parser.py  extractor.py  form_artifact.py  form_paths.py  form_router.py  form_summary.py  forms_index.py  managed_form_adapter.py  managed_form_parser.py  managed_form_summary.py  managed_forms.py  pipeline.py  scan_forms.py  shadow_tree.py  skd_extractor.py  sync_index.py  v8unpack_backend.py
