[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "v8unpack-agent"
version = "0.1.0"
description = "Agent-pipeline adapter for v8unpack: path factory, FormArtifact, drift index"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pytest>=9.1.1",
    # PR#29 (.erf support) merged into saby-integration/v8unpack main, release >1.2.9 pending.
    # Switch to v8unpack>=<next-release> once published on PyPI.
    "v8unpack @ git+https://github.com/saby-integration/v8unpack.git@main",
]

[project.optional-dependencies]
test = [
    "pytest>=7",
]

[project.urls]
Homepage = "https://github.com/MRDK80/v8unpack-agent"

[tool.setuptools]
packages = ["v8unpack_agent"]

[tool.pytest.ini_options]
pythonpath = ["."]
